Fix TooltipIfTruncated with child elements
In this case the event target was not the immediate child and thus
detecting the overflow did not work properly.

Also used the opportunity to convert it to a function component.

--- a/indico/modules/events/editing/client/js/editing/timeline/FileDisplay/FileDisplay.module.scss
+++ b/indico/modules/events/editing/client/js/editing/timeline/FileDisplay/FileDisplay.module.scss
@@ -40,12 +40,6 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-
-      a {
-        display: block;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
     }
   }
 }
